[metadata]
name = bdbc-test-nwb-packaging
version = 0.3.0
author = "Keisuke Sehara"
author_email = keisuke.sehara@gmail.com
description = the PyTest code for testing the bdbc-nwb-packager package.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BraiDyn-BC/bdbc-test-nwb-packaging
project_urls =
    Bug Tracker = https://github.com/BraiDyn-BC/bdbc-test-nwb-packaging/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.7
install_requires =
    pytest
    python-dotenv
    numpy
    pandas
    bdbc-nwb-packager>=0.3

[options.entry_points]
console-scripts = 

[flake8]
ignore =
    E501
    E221
    E712

